tests/fixtures/pass/method-return.php
<?php

namespace Chaozhuo\Helper;

use winwin\winner\fixtures\Bar;

class Foo
{
    /**
     * @return Bar
     */
    public function foo()
    {
    }
}
