tests/fixtures/fail/method-return.php
<?php
namespace Chaozhuo\Helper;

class Foo
{
    /**
     * @return Bar
     */
    public function foo()
    {
    }
}